--- a/BaseUI/android/build.gradle
+++ b/BaseUI/android/build.gradle
@@ -34,5 +34,8 @@ allprojects {
 
         google()
         maven { url 'https://www.jitpack.io' }
+
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
     }
 }
