--- a/BaseUI/package.json
+++ b/BaseUI/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.8",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-image-crop-picker": "^0.36.2",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
