--- a/BaseUI/package.json
+++ b/BaseUI/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-image-crop-picker": "^0.36.2",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
