--- a/BaseUI/package.json
+++ b/BaseUI/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
+    "@types/react-native-dotenv": "^0.2.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-dotenv": "^3.2.0",
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^8.1.0"
